<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="chicago_bulls_vs_detroit_pistons">Chicago Bulls vs Detroit Pistons</string>
    <string name="tanda">:</string>
    <string name="_0">0</string>
    <string name="score">Score</string>
    <string name="goal">Goal</string>
    <string name="football_match_schedule">Football Match Schedule</string>
    <string name="football_club_indonesia">Football Club Indonesia</string>
    <string name="man_united_vs_brighton">Man United vs Brighton</string>
    <string name="english_premier_league">English Premier League</string>
    <string name="_1">1</string>
    <string name="_2019_11_10">2019-11-10</string>


    <string-array name="id_league">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <string-array name="daftar_club">
        <item name="english_premier_league">English Premier League</item>
        <item name="french_ligue_1">French Ligue 1</item>
        <item name="german_bundesliga">German Bundesliga</item>
        <item name="italian_serie_a">Italian Serie A</item>
        <item name="spanish_la_liga">Spanish La Liga</item>
        <item name="american_mayor_league">American Mayor League</item>
        <item name="protugeuese_premiera_liga">Protugeuese Premiera Liga</item>
        <item name="australian_a_league">Australian A League</item>
        <item name="scotish_premier_league">Scotish Premier League</item>
        <item name="english_league_1">English League 1</item>
    </string-array>

    <array name="daftar_foto">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="loss">Loss</string>
    <string name="draw">Draw</string>
    <string name="win">Win</string>
    <string name="played">Played</string>
    <string name="name">Name</string>
    <string name="description">Arsenal Football Club is a professional football club based in Holloway, London which currently plays in the Premier League, the highest level of English football. One of the most successful clubs in English football, they have won 13 First Division and Premier League titles and a joint record 11 FA Cups.r r Arsenal\'s success has been particularly consistent: the club has accumulated the second most points in English top-flight football, hold the ongoing record for the longest uninterrupted period in the top flight, and would be placed first in an aggregated league of the entire 20th century. Arsenal is the second side to complete an English top-flight season unbeaten (in the 2003–04 season), playing almost twice as many matches as the previous invincibles Preston North End in the 1888–89 season.r r Arsenal was founded in 1886 in Woolwich and in 1893 became the first club from the south of England to join the Football League. In 1913, they moved north across the city to Arsenal Stadium in Highbury. In the 1930s, they won five League Championship titles and two FA Cups. After a lean period in the post-war years they won the League and FA Cup Double, in the 1970–71 season, and in the 1990s and first decade of the 21st century, won two more Doubles and reached the 2006 UEFA Champions League Final. Since neighbouring Tottenham Hotspur, the two clubs have had a fierce rivalry, the North London derby.r r Arsenal have one of the highest incomes and largest fanbases in the world. The club was named the fifth most valuable association football club in the world, valued at £1.3 billion in 2014.</string>
    <string name="description_tittle">Description</string>
    <string name="league">English Premier League</string>
    <string name="team">Arsenal</string>

    <!-- TODO: Remove or change this placeholder text --><![CDATA[
    resources>
]]>
</resources>