<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/strEventItemMatchTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/man_united_vs_brighton"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/strLeagueItemMatchTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_premier_league"
                android:textSize="@dimen/_10ssp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/strEventItemMatchTV"
                app:layout_constraintStart_toStartOf="@+id/strEventItemMatchTV"
                app:layout_constraintTop_toBottomOf="@+id/strEventItemMatchTV" />


            <TextView
                android:id="@+id/intHomeScoreItemMatchTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/_1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strLeagueItemMatchTV" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="@+id/intHomeScoreItemMatchTV"
                app:layout_constraintEnd_toEndOf="@+id/strLeagueItemMatchTV"
                app:layout_constraintStart_toStartOf="@+id/strLeagueItemMatchTV"
                app:layout_constraintTop_toBottomOf="@+id/strLeagueItemMatchTV" />

            <TextView
                android:id="@+id/intAwayScoreItemMatchTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_90sdp"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="@+id/intHomeScoreItemMatchTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/intHomeScoreItemMatchTV" />

            <TextView
                android:id="@+id/dateEventItemMatchTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2019_11_10"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/intAwayScoreItemMatchTV"
                app:layout_constraintStart_toStartOf="@+id/intHomeScoreItemMatchTV"
                app:layout_constraintTop_toBottomOf="@+id/intHomeScoreItemMatchTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>