<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.detail.detailteam.DetailTeamsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backDetailTemasIV"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchTeamsDetailIV"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/backDetailTemasIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backDetailTemasIV" />

    <ImageButton
        android:id="@+id/addFavDetailTeamsIV"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/ic_heart_1"
        app:layout_constraintBottom_toBottomOf="@+id/searchTeamsDetailIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchTeamsDetailIV"
        app:layout_constraintTop_toTopOf="@+id/searchTeamsDetailIV" />

    <ImageView
        android:id="@+id/badgeDetailTeamsIV"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strTeamDetailTeamsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/badgeDetailTeamsIV"
        app:layout_constraintStart_toStartOf="@+id/badgeDetailTeamsIV"
        app:layout_constraintTop_toBottomOf="@+id/badgeDetailTeamsIV" />

    <TextView
        android:id="@+id/strLeagueDetailTeamsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/league"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/strTeamDetailTeamsTV"
        app:layout_constraintStart_toStartOf="@+id/strTeamDetailTeamsTV"
        app:layout_constraintTop_toBottomOf="@+id/strTeamDetailTeamsTV" />

    <TextView
        android:id="@+id/titleDetailTeamsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/description_tittle"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDetailTeamsTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/descriptionDetailTeamsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>